--- a/01-intro/Homework.ipynb
+++ b/01-intro/Homework.ipynb
@@ -2,7 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "073d08f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: Line magic function `%!pip` not found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%!pip install --upgrade pip"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
+   "id": "45272883",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: Line magic function `%!pip` not found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%!pip install pyarrow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "c11614de",
    "metadata": {},
    "outputs": [],
@@ -12,17 +48,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "d4942396",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'1.4.2'"
+       "'2.2.3'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "bcae7a89",
    "metadata": {},
    "outputs": [],
@@ -43,45 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "29881abc",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Warning: Binary output can mess up your terminal. Use \"--output -\" to tell \r\n",
-      "Warning: curl to output it to your terminal anyway, or consider \"--output \r\n",
-      "Warning: <FILE>\" to save to a file.\r\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "7b569a53",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting pyarrow\n",
-      "  Downloading pyarrow-20.0.0-cp39-cp39-manylinux_2_28_x86_64.whl (42.3 MB)\n",
-      "\u001b[K     |████████████████████████████████| 42.3 MB 29.2 MB/s eta 0:00:01\n",
-      "\u001b[?25hInstalling collected packages: pyarrow\n",
-      "Successfully installed pyarrow-20.0.0\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "c0d8bc80",
    "metadata": {},
    "outputs": [
@@ -272,7 +270,7 @@
        "4                    1.0         19.68                   2.5         0.00  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "008685a5",
    "metadata": {},
    "outputs": [
@@ -293,7 +291,7 @@
        "(3066766, 19)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "4b426467",
    "metadata": {},
    "outputs": [],
@@ -315,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "527c8c2f",
    "metadata": {},
    "outputs": [],
@@ -325,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "35b59481",
    "metadata": {},
    "outputs": [],
@@ -335,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "c63d2ede",
    "metadata": {},
    "outputs": [],
@@ -345,51 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "abd59dad",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported format string passed to Timedelta.__format__",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [16]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mСтандартное отклонение продолжительности поездок в январе: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mstd_dev_duration\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m минут\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported format string passed to Timedelta.__format__"
-     ]
-    }
-   ],
-   "source": [
-    "print(f\"\\nСтандартное отклонение продолжительности поездок в январе: {std_dev_duration:.2f} минут\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "0520f7c7",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported format string passed to Timedelta.__format__",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [17]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mСтандартное отклонение продолжительности поездок: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mstd_dev_duration\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m минут\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported format string passed to Timedelta.__format__"
-     ]
-    }
-   ],
-   "source": [
-    "print(f\"\\nСтандартное отклонение продолжительности поездок: {std_dev_duration:.2f} минут\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "78f30111",
    "metadata": {},
    "outputs": [],
@@ -399,17 +353,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "1554026f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'1.0.2'"
+       "'1.6.1'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,49 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "84450ff7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['duration_minutes'] = df['duration'].dt.total_seconds() / 60\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "662d9684",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "std_dev_duration_calculated = df['duration_minutes'].std()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "38af6b9b",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported format string passed to Timedelta.__format__",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [24]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mСтандартное отклонение продолжительности поездок: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mstd_dev_duration\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m минут\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported format string passed to Timedelta.__format__"
-     ]
-    }
-   ],
-   "source": [
-    "print(f\"\\nСтандартное отклонение продолжительности поездок: {std_dev_duration:.2f} минут\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "5be6f3e4",
    "metadata": {},
    "outputs": [
@@ -474,7 +386,7 @@
       "\n",
       "Столбцы дат успешно преобразованы в datetime.\n",
       "\n",
-      "Столбец 'duration' создан. Тип данных: timedelta64[ns]\n",
+      "Столбец 'duration' создан. Тип данных: timedelta64[us]\n",
       "\n",
       "Столбец 'duration_minutes' успешно создан. Тип данных: float64\n",
       "\n",
@@ -487,7 +399,7 @@
       "4  2023-01-01 00:10:29   2023-01-01 00:21:19         10.833333\n",
       "--------------------------------------------------\n",
       "\n",
-      "Тип вычисленного std_dev_duration: <class 'float'>\n",
+      "Тип вычисленного std_dev_duration: <class 'numpy.float64'>\n",
       "Стандартное отклонение продолжительности поездок в январе: 42.59 минут\n"
      ]
     }
@@ -586,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "bfbd6d0e",
    "metadata": {},
    "outputs": [
@@ -603,30 +515,6 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "\n",
-    "# --- Предполагается, что предыдущий код уже выполнен ---\n",
-    "# Например, загрузка данных и вычисление duration_minutes:\n",
-    "#\n",
-    "# try:\n",
-    "#     df = pd.read_parquet('yellow_tripdata_2023-01.parquet')\n",
-    "# except FileNotFoundError:\n",
-    "#     print(\"Файл не найден, используется пример DataFrame\")\n",
-    "#     data = {\n",
-    "#         'tpep_pickup_datetime': ['2023-01-01 00:32:10', '2023-01-01 00:55:08', '2023-01-01 00:25:04', '2023-01-01 00:03:48', '2023-01-01 00:10:29', '2023-01-01 00:00:00', '2023-01-01 01:30:00'],\n",
-    "#         'tpep_dropoff_datetime': ['2023-01-01 00:40:36', '2023-01-01 01:01:27', '2023-01-01 00:37:49', '2023-01-01 00:13:25', '2023-01-01 00:21:19', '2023-01-01 00:00:30', '2023-01-01 01:35:00']\n",
-    "#     } # Добавлены значения для демонстрации фильтрации\n",
-    "#     df = pd.DataFrame(data)\n",
-    "\n",
-    "# df['tpep_pickup_datetime'] = pd.to_datetime(df['tpep_pickup_datetime'])\n",
-    "# df['tpep_dropoff_datetime'] = pd.to_datetime(df['tpep_dropoff_datetime'])\n",
-    "# df['duration'] = df['tpep_dropoff_datetime'] - df['tpep_pickup_datetime']\n",
-    "# df['duration_minutes'] = df['duration'].dt.total_seconds() / 60\n",
-    "#\n",
-    "# print(\"Исходный DataFrame (пример с duration_minutes):\")\n",
-    "# print(df[['tpep_pickup_datetime', 'tpep_dropoff_datetime', 'duration_minutes']].head(7))\n",
-    "# print(\"-\" * 50)\n",
-    "# --- Конец предполагаемого предыдущего кода ---\n",
-    "\n",
     "\n",
     "# Проверяем, существует ли столбец 'duration_minutes'\n",
     "if 'duration_minutes' not in df.columns:\n",
@@ -671,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "c0d56d1a",
    "metadata": {},
    "outputs": [
@@ -693,7 +581,7 @@
       "{'PULocationID': '161', 'DOLocationID': '141'}\n",
       "--------------------------------------------------\n",
       "\n",
-      "Тип полученной матрицы признаков: <class 'scipy.sparse.csr.csr_matrix'>\n",
+      "Тип полученной матрицы признаков: <class 'scipy.sparse._csr.csr_matrix'>\n",
       "Размерность матрицы признаков (строки, столбцы): (3009173, 515)\n",
       "--------------------------------------------------\n",
       "Размерность (количество столбцов) полученной матрицы признаков: 515\n",
@@ -790,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "a50c7334",
    "metadata": {},
    "outputs": [
@@ -878,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "0ba226c4",
    "metadata": {},
    "outputs": [
@@ -888,16 +776,18 @@
      "text": [
       "\n",
       "Загрузка валидационных данных из: https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2023-02.parquet\n",
-      "Валидационные данные загружены. Количество строк: 2913955\n",
-      "Количество записей в валидационном наборе до фильтрации: 2913955\n",
-      "Количество записей в валидационном наборе после фильтрации (1-60 мин): 2855951\n",
-      "--------------------------------------------------\n",
-      "\n",
-      "Валидационные данные преобразованы с использованием обученного DictVectorizer.\n",
-      "Размерность X_val (строки, столбцы): (2855951, 515)\n",
-      "--------------------------------------------------\n",
-      "RMSE на валидационных данных (февраль 2023): 7.81\n",
-      "Для сравнения, RMSE на обучающих данных был: 7.65\n"
+      "Валидационные данные загружены. Количество строк: 2913955\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -1010,19 +900,11 @@
     "if 'rmse_train' in locals():\n",
     "    print(f\"Для сравнения, RMSE на обучающих данных был: {rmse_train:.2f}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0b50294e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1036,7 +918,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
